--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ORT-PabloFernandez/TP2-2022-2B#readme",
   "type": "module",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "chalk": "^5.0.1"
   }
