--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
-    "chalk": "^5.0.1"
+    "chalk": "^5.0.1",
+    "express": "^4.18.1"
   }
 }
